fix(frontpage.tex): work around Super-Linter(LATEX) warnings

--- a/master-thesis-template-polito/common/frontpage.tex
+++ b/master-thesis-template-polito/common/frontpage.tex
@@ -2,11 +2,11 @@
 \begin{titlepage}
 \centering
 %
-{\institutionfont \textbf{\MakeUppercase{\thesisuniversity}} \par}
+{\institutionfont{}\textbf{\MakeUppercase{\thesisuniversity}} \par}
 %
 \vspace{\stretch{2}} % changing this number and the others changes the proportion
 %
-{\divisionfont \textbf{\thesislevel's Degree in \thesiscourse} \par}
+{\divisionfont{}\textbf{\thesislevel's Degree in \thesiscourse} \par}
 %
 \vspace{\stretch{3}}
 %
@@ -14,11 +14,11 @@
 %
 \vspace{\stretch{4}}
 %
-{\divisionfont \textbf{\thesislevel's Degree Thesis} \par}
+{\divisionfont{}\textbf{\thesislevel's Degree Thesis} \par}
 %
 \vspace{\stretch{3}}
 %
-{\customtitlefont \textbf{\thesistitle} \par}
+{\customtitlefont{}\textbf{\thesistitle} \par}
 %
 \vspace{\stretch{10}}
 %
