--- a/master-thesis-template-polito/thesis.tex
+++ b/master-thesis-template-polito/thesis.tex
@@ -30,7 +30,7 @@
 
 % to load the glossaries, not needed if using bib2gls
 \input{glossaries.tex}
-\makeglossaries
+\makeglossaries{}
 
 \begin{document}
 
@@ -66,19 +66,19 @@
 %\cleardoublepage
 %\thispagestyle{empty} % to have empty page, without numbers
 % 2) or
-\paginavuota % to manually create a blank page
+\paginavuota{} % to manually create a blank page
 
-\sommario
+\sommario{}
 \input{content/summary}
 
 \phantom{0}
-\cleardoublepage
+\cleardoublepage{}
 \thispagestyle{empty}
 
-\ringraziamenti % acknowledgements
+\ringraziamenti{} % acknowledgements
 \input{content/acknowledgements}
 
-\paginavuota
+\paginavuota{}
 \tableofcontents
 
 \listoftables % ToC for tables
@@ -91,14 +91,14 @@
 % style overrides the global style
 % here we are printing only abbreviations
 % printunsrtglossary if using record, otherwise printglossary is ok
-\paginavuota
+\paginavuota{}
 \printunsrtglossary[style=altlist,title=Acronyms,type=\glsxtrabbrvtype]
 
 % also list of symbols here if needed
 
 \input{common/post_summary_config.tex}
 
-\mainmatter
+\mainmatter{}
 
 %\part{Prima Parte} % parts division, not needed
 % Chapters always open on a right-side page, i.e. odd numbers, so a blank page is inserted if needed
@@ -115,7 +115,7 @@
 % endnotes here if needed
 
 \phantom{0}
-\cleardoublepage
+\cleardoublepage{}
 \printbibliography[heading=bibintoc] % heading required to show it in ToC
 
 \end{document}
